--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,15 @@ description: >- # this means to ignore newlines until "baseurl:"
   Web developer and visual artist from Serbia
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+
+twitter:
+  username: emil_graphics
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
