--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Emil Osmanbegovic
-email: your-email@example.com
+email: hello@emilosman.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ruby on Rails & JavaScript developer
 baseurl: "" # the subpath of your site, e.g. /blog
